clusters/cluster0/kubernetes/apps/gregbob/gregbob/resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-service
  namespace: gregbob
spec:
  type: ClusterIP
  selector:
    app: resume
  ports:
    - name: resume-port
      port: 8080
      protocol: TCP
