clusters/cluster0/kubernetes/apps/gregbob/gregbob/resume/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume
  namespace: gregbob
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gregbob.gregbob.net
spec:
  ingressClassName: external
  rules:
  - host: gregbob.gregbob.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: resume-service
            port:
              number: 8080
  - host: resume.gregbob.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: resume-service
            port:
              number: 8080
